[project]
name = "mcps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx[socks]>=0.28.1",
    "mcp>=1.13.1",
    "pinotdb>=5.7.0",
    "pymongo>=4.14.1",
    "pymysql>=1.1.2",
    "redis>=6.4.0",
    "requests>=2.32.5",
]
